--- a/_posts/2019-10-08-Joker.md
+++ b/_posts/2019-10-08-Joker.md
@@ -5,7 +5,7 @@ title: Joker
 
 [Joker](https://www.cnet.com/pictures/the-joker-see-all-the-actors-whove-played-the-dc-comics-villain/) in Adobe Draw. 
 
-<p><figure><img src="../images/2019-10-18/joker.png" width="50%" height="50%" alt=""/><figcaption>[Joker]</figcaption></figure></p>
+<p><figure><img src="../images/2019-10-18/joker.png" width="50%" height="50%" alt=""/><figcaption></figcaption></figure></p>
 
 
 
