--- a/_posts/2019-10-18-18-10-2019.md
+++ b/_posts/2019-10-18-18-10-2019.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Joker
----
+title: 2019-10-18 
+ ---
 
 [Joker](https://www.cnet.com/pictures/the-joker-see-all-the-actors-whove-played-the-dc-comics-villain/) in Adobe Draw. 
 
-<p><figure><img src="../images/2019-10-18/joker.png" width="50%" height="50%" alt=""/><figcaption></figcaption></figure></p>
+<p><figure><img src="../images/2019-10-18/joker.png" width="75%" alt=""/><figcaption></figcaption></figure></p>
 
 
 
