--- a/_posts/2019-10-18-18-10-2019.md
+++ b/_posts/2019-10-18-18-10-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2019-10-18 
+title: 18th Oct, 2019 
  ---
 
 [Joker](https://www.cnet.com/pictures/the-joker-see-all-the-actors-whove-played-the-dc-comics-villain/) in Adobe Draw. 
