--- a/_posts/2019-10-18-18-10-2019.md
+++ b/_posts/2019-10-18-18-10-2019.md
@@ -1,6 +1,10 @@
 ---
 layout: post
-title: 18th Oct, 2019 
+title: 18th Oct, 2019
+categories: Art
+tags:
+mathjax: true
+comments: true
  ---
 
 [Joker](https://www.cnet.com/pictures/the-joker-see-all-the-actors-whove-played-the-dc-comics-villain/) in Adobe Draw. 
