--- a/_posts/2021-03-09-1.md
+++ b/_posts/2021-03-09-1.md
@@ -1,39 +1,10 @@
 ---
 layout: post
-title: Transform with sitk
-categories: Computer Vision
+title: 1 
+categories: Coding
 tags:
 mathjax: true
 comments: true
 ---
 
-Transforming images with `SimpleITK` was easy to setup.
-For example, correctly upsample an anisotropic image like this. Here, `sitkNearestNeighbor`	was used since it is a label mask and we wouldn't like float ids:
-
-```
-def resample_nn(anisotropy, image, transform):
-    depth = image.GetSize()[2]
-    height = image.GetSize()[1]
-    width = image.GetSize()[0]
-    print(depth, height, width)
-    reference_image =sitk.GetImageFromArray(np.zeros((int(depth*anisotropy), height, width))) 
-    #reference_image = image
-    interpolator = sitk.sitkNearestNeighbor
-    default_value = 0.0
-    return sitk.Resample(image, reference_image, transform, interpolator, default_value)
-
-
-anisotropy = float(os.environ['anisotropy'])
-gt = tifffile.imread('pred/X182.tif')
-gt_sitk = sitk.GetImageFromArray(gt)
-new_transform = sitk.AffineTransform(3)
-matrix = np.eye(3)
-matrix[2,2] = anisotropy
-inv_matrix = np.linalg.inv(matrix)
-new_transform.SetMatrix(inv_matrix.ravel())
-
-gt_sitk_isotropic = resample_nn(anisotropy, gt_sitk, new_transform)
-gt_isotropic = sitk.GetArrayFromImage(gt_sitk_isotropic)
-tifffile.imsave("upsampled_pred.tif", gt_isotropic)
-```
 
