--- a/_posts/2021-03-09-1.md
+++ b/_posts/2021-03-09-1.md
@@ -1,10 +1,15 @@
 ---
 layout: post
-title: 1 
-categories: Coding
+title: The Ninth Rain 
+categories: Fantasy
 tags:
 mathjax: true
 comments: true
 ---
+
+*The Ninth Rain* by Jen Williams starts off with a prologue, highlighting an event occuring 200 years ago. Typically when starting off with an epic saga, the reader often expects hearing about the hero of the tale, while the morally compromised characters are introduced later as the story deepens. This idea is cleverly flipped in the first few pages of the book.
+
+>"'Tormalin the Oathless', she spat, taking a step away from him. 'That's what they called you, because you were feckless and a layabout, and I thought, how dare they call my brother so? Even in jest. But they were right. You care about nothing but yourself, Oathless one.'"
+
 
 
