--- a/_posts/2021-03-13-Think.md
+++ b/_posts/2021-03-13-Think.md
@@ -11,5 +11,12 @@ Simon Blackburn's introduction to philosophy reads very nicely and is easy to gr
 
 In the early few pages, he asks the pertinent question of how can one learn philosophy but states that there is a better question to ask:
 
->"How is philosophy learned? A better question is: how can thinking skills be acquired? The thinking in question involves attending to basic structures of thought. This can be done well or badly, intelligently or ineptly. But doing it well is not primarily a matter of acquiring a body of knowledge. It is more like playing the piano well. It is a `knowing how' as much as `knowing that'. The most famous philosophical character of the classical world, Socrates, did not pride himself on how much he knew. On the contrary, he prided himself on being the only one who knew how little he knew ..." 
+>"How is philosophy learned? A better question is: how can thinking skills be acquired? The thinking in question involves attending to basic structures of thought. This can be done well or badly, intelligently or ineptly. But doing it well is not primarily a matter of acquiring a body of knowledge. It is more like playing the piano well. It is a knowing how as much as knowing that. The most famous philosophical character of the classical world, Socrates, did not pride himself on how much he knew. On the contrary, he prided himself on being the only one who knew how little he knew ..." 
 
+Blackburn cites the Spanish painter [Goya](https://en.wikipedia.org/wiki/The_Sleep_of_Reason_Produces_Monsters) who made a series of paintings entitled `the sleep of reason produces monsters'. 
+
+>"Goya beieved that there are always people telling us what we wantm how they will provide it, and what we shouls believe. Convictions are infectious, and people can make others convined of almost anything."
+
+Blackburn attempts to paraphrase Descartes's ruminations. I found his explanation of `I think, therefore I am' illuminating:
+
+>"Thinking? At last I have discovered it - thought; this alone is inseparable from me. I am, I exist - that is certain. But for how long? For as long as I am thinking. For it could be, that were I totally to cease from thinking, I should totally cease to exist ... I am, then, in the strict sense only a thing that thinks."
