--- a/_posts/2021-03-13-Think.md
+++ b/_posts/2021-03-13-Think.md
@@ -15,8 +15,8 @@ In the early few pages, he asks the pertinent question of how can one learn phil
 
 Blackburn cites the Spanish painter [Goya](https://en.wikipedia.org/wiki/The_Sleep_of_Reason_Produces_Monsters) who made a series of paintings entitled `the sleep of reason produces monsters'. 
 
->"Goya beieved that there are always people telling us what we wantm how they will provide it, and what we shouls believe. Convictions are infectious, and people can make others convined of almost anything."
+>"Goya beieved that there are always people telling us what we want, how they will provide it, and what we should believe. Convictions are infectious, and people can make others convinced of almost anything."
 
-Blackburn attempts to paraphrase Descartes's ruminations. I found his explanation of `I think, therefore I am' illuminating:
+Blackburn attempts to paraphrase Descartes's ruminations. I found his explanation of *I think, therefore I am*, illuminating:
 
 >"Thinking? At last I have discovered it - thought; this alone is inseparable from me. I am, I exist - that is certain. But for how long? For as long as I am thinking. For it could be, that were I totally to cease from thinking, I should totally cease to exist ... I am, then, in the strict sense only a thing that thinks."
